--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "derby-ui-boot",
   "description": "A Derby component library based on Twitter Bootstrap.",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "homepage": "http://derbyjs.com/",
   "repository": {
     "type": "git",
-    "url": "git://github.com/codeparty/derby-ui-boot.git"
+    "url": "git://github.com/azat-co/derby-ui-boot.git"
   },
   "dependencies": {
-    "bootstrap": "git://github.com/twitter/bootstrap.git"
+    "bootstrap": "git://github.com/twbs/bootstrap.git"
   },
   "devDependencies": {},
   "optionalDependencies": {},
